Fine Tunning methods

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -241,11 +241,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fine Tunning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from st_nca.finetune import FineTunningDataset, finetune_loop\n",
+    "\n",
+    "DTYPE = torch.float32\n",
+    "NTRANSF = 2\n",
+    "NHEADS = 4\n",
+    "NTRANSFF = 256\n",
+    "TRANSFACT = nn.GELU()\n",
+    "MLP = 2\n",
+    "MLPD = 256\n",
+    "MLPACT = nn.GELU()\n",
+    "\n",
+    "cm = CellModel(num_tokens = ds.max_length, dim_token = ds.token_dim,\n",
+    "               num_transformers = NTRANSF, num_heads = NHEADS, feed_forward = NTRANSFF, \n",
+    "               transformer_activation = TRANSFACT,\n",
+    "               mlp = MLP, mlp_dim = MLPD, mlp_activation = MLPACT,\n",
+    "               device = DEVICE, dtype = DTYPE)\n",
+    "\n",
+    "resume(cm, DEFAULT_PATH + 'cell_model_{}_{}_{}_{}_{}'.format(NTRANSF,NHEADS,NTRANSFF,MLP,MLPD))\n",
+    "\n",
+    "subgraph = pems.G.subgraph(sensors)\n",
+    "\n",
+    "gca = GraphCellularAutomata(device=cm.device, dtype=cm.dtype, graph = subgraph,\n",
+    "                            max_length = pems.max_length, token_size=pems.token_dim,\n",
+    "                            tokenizer=pems.tokenizer, cell_model = cm)\n",
+    "\n",
+    "ds = FineTunningDataset(pems, sensors, )\n",
+    "\n",
+    "finetune_loop(DEVICE, )"
+   ]
   }
  ],
  "metadata": {
